syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/yt/go/ytprof/api";


message TimePeriod {
    string PeriodStartTime = 1;
    string PeriodEndTime = 2;
}

message Metaquery {
    TimePeriod TimePeriod = 1;
    string Query = 2;
    int32 QueryLimit = 3;
}

message Metadata {
    string ProfileType = 1;
    string Host = 2;
    string ArcRevision = 3;
    string GUID = 4;
    string Timestamp = 5;
    map<string, string> UserTags = 6;
}

message ListRequest {
    Metaquery Metaquery = 1;
}

message ListResponse {
    repeated Metadata Metadata = 1;
}


service YTProfService {
    rpc List(ListRequest) returns (ListResponse) {
        option (google.api.http) = {
            post: "/ytprof/api/list"
            body: "*"
        };
    }
}