package NYT.NJobTrackerClient.NProto;

import "yt/core/protos/guid.proto";
import "yt/ytlib/job_tracker_client/job.proto";
import "yt/ytlib/node_tracker_client/node.proto";

////////////////////////////////////////////////////////////////////////////////

// Informs Job Tracker about node status and requests orders.

message TReqHeartbeat
{
    required int32 node_id = 1;
    required NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 2;
    required NNodeTrackerClient.NProto.TNodeResources resource_usage = 3;
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 4;
    repeated TJobStatus jobs = 5;
    optional bool stored_jobs_included = 6 [default = false];
}

message TJobStartInfo
{
    required NYT.NProto.TGuid job_id = 1;
    optional NYT.NProto.TGuid operation_id = 2;
    // Resource limits as predicted by the controller.
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 3;
}

message TRspHeartbeat
{
    repeated TJobStartInfo jobs_to_start = 1;
    repeated NYT.NProto.TGuid jobs_to_abort = 2;
    repeated NYT.NProto.TGuid jobs_to_remove = 3;
    repeated NYT.NProto.TGuid jobs_to_store = 4;
    repeated NYT.NProto.TGuid jobs_to_interrupt = 5;
    repeated NYT.NProto.TGuid jobs_to_fail = 6;
    optional bool include_stored_jobs_in_next_heartbeat = 7;
    optional bool scheduling_skipped = 8;
    optional bool enable_job_reporter = 9;
    optional bool enable_job_spec_reporter = 10;
}

////////////////////////////////////////////////////////////////////////////////

